Fix regressions from 9e28e6e1.

BUG:241405